# rust_sp_web

./: Cargo.toml  rust_sp_web.conf
public/: 404.html
public/app_js/: common.js  report_th_1.js  system_info.js
src/: main.rs
src/comm/: cpu_temp.rs  db.rs  mod.rs  util.rs
src/routes/: login.rs  mod.rs  report_th_1.rs  system_info.rs
templates/: login.html  report_th_1.html  system_info.html
